--- a/SunamoGoogleSheets.csproj
+++ b/SunamoGoogleSheets.csproj
@@ -3,16 +3,20 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>24.1.8.1</Version>
-	  <Description>Parsing from and formatting to Google Sheets</Description>
+    <Version>24.1.13.1</Version>
+    <Description>Parsing from and formatting to Google Sheets</Description>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="SunamoBts" Version="24.1.5.1" />
-    <PackageReference Include="SunamoCollections" Version="24.1.7.1" />
-    <PackageReference Include="SunamoCollectionsGeneric" Version="24.1.5.1" />
-    <PackageReference Include="SunamoStringGetLines" Version="24.1.7.1" />
-    <PackageReference Include="SunamoStringJoin" Version="24.1.5.1" />
-    <PackageReference Include="SunamoStringSplit" Version="24.1.5.1" />
+    <PackageReference Include="SunamoBts" Version="24.1.13.2" />
+    <PackageReference Include="SunamoCollections" Version="24.1.10.1" />
+    <PackageReference Include="SunamoCollectionsGeneric" Version="24.1.10.1" />
+    <PackageReference Include="SunamoDateTime" Version="24.1.10.1" />
+    <PackageReference Include="SunamoStringGetLines" Version="24.1.11.1" />
+    <PackageReference Include="SunamoStringJoin" Version="24.1.10.1" />
+    <PackageReference Include="SunamoStringSplit" Version="24.1.11.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Data\" />
   </ItemGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>$(DefineConstants);ASYNC</DefineConstants>
