--- a/SunamoGoogleSheets.csproj
+++ b/SunamoGoogleSheets.csproj
@@ -3,19 +3,16 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>24.2.1.3</Version>
+    <Version>24.2.6.3</Version>
     <Description>Parsing from and formatting to Google Sheets</Description>
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="Data\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="SunamoData" Version="24.2.1.1" />
-    <PackageReference Include="SunamoStringGetLines" Version="24.2.1.1" />
-    <PackageReference Include="SunamoDateTime" Version="24.2.1.1" />
-    <PackageReference Include="SunamoNumbers" Version="24.2.1.2" />
-    <PackageReference Include="SunamoStringJoin" Version="24.2.1.1" />
-    <PackageReference Include="SunamoStringShared" Version="24.2.1.1" />
+    <PackageReference Include="SunamoCollectionsValuesTableGrid" Version="24.2.6.2" />
+    <PackageReference Include="SunamoData" Version="24.2.6.3" />
+    <PackageReference Include="SunamoExtensions" Version="24.2.6.2" />
   </ItemGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>$(DefineConstants);ASYNC</DefineConstants>
