--- a/SunamoGoogleSheets.csproj
+++ b/SunamoGoogleSheets.csproj
@@ -11,16 +11,18 @@
     <RepositoryUrl>https://github.com/sunamo/SunamoGoogleSheets.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="Data\" />
+    <None Include="readme.md" Pack="True" PackagePath="." />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>$(DefineConstants);ASYNC;SunamoGoogleSheets</DefineConstants>
+    <DefineConstants>$(DefineConstants);ASYNC;SunamoGoogleSheets;SunamoGoogleSheets.csproj</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>$(DefineConstants);ASYNC;SunamoGoogleSheets</DefineConstants>
+    <DefineConstants>$(DefineConstants);ASYNC;SunamoGoogleSheets;SunamoGoogleSheets.csproj</DefineConstants>
   </PropertyGroup>
 </Project>
