--- a/SunamoGoogleSheets.csproj
+++ b/SunamoGoogleSheets.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>24.7.18.2</Version>
+    <Version>24.7.18.3</Version>
     <Description>Parsing from and formatting to Google Sheets</Description>
     <Authors>www.sunamo.cz</Authors>
     <Copyright>www.sunamo.cz</Copyright>
@@ -12,7 +12,7 @@
     <RepositoryType>git</RepositoryType>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>readme.md</PackageReadmeFile>
-    <PackageReleaseNotes>Updated SwitchRowsAndColumn()</PackageReleaseNotes>
+    <PackageReleaseNotes>Update method</PackageReleaseNotes>
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="Data\" />
