--- a/SunamoGoogleSheets.csproj
+++ b/SunamoGoogleSheets.csproj
@@ -1,29 +1,30 @@
 <Project Sdk="Microsoft.NET.Sdk">
-    <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-        <Version>24.7.18.3</Version>
-        <Description>Parsing from and formatting to Google Sheets</Description>
-        <Authors>www.sunamo.cz</Authors>
-        <Copyright>www.sunamo.cz</Copyright>
-        <PackageProjectUrl>https://sunamo.cz/</PackageProjectUrl>
-        <RepositoryUrl>https://github.com/sunamo/SunamoGoogleSheets.git</RepositoryUrl>
-        <RepositoryType>git</RepositoryType>
-        <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <PackageReadmeFile>readme.md</PackageReadmeFile>
-        <PackageReleaseNotes>Update method</PackageReleaseNotes>
-    </PropertyGroup>
-    <ItemGroup>
-        <Folder Include="Data\"/>
-        <None Include="readme.md" Pack="True" PackagePath="."/>
-    </ItemGroup>
-    <ItemGroup>
-    </ItemGroup>
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-        <DefineConstants>$(DefineConstants);ASYNC;SunamoGoogleSheets;SunamoGoogleSheets.csproj</DefineConstants>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-        <DefineConstants>$(DefineConstants);ASYNC;SunamoGoogleSheets;SunamoGoogleSheets.csproj</DefineConstants>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <Version>24.10.2.1</Version>
+    <Description>Parsing from and formatting to Google Sheets</Description>
+    <Authors>www.sunamo.cz</Authors>
+    <Copyright>www.sunamo.cz</Copyright>
+    <PackageProjectUrl>https://sunamo.cz/</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/sunamo/SunamoGoogleSheets.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
+    <PackageReleaseNotes>Update method</PackageReleaseNotes>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  </PropertyGroup>
+  <ItemGroup>
+    <Folder Include="Data\" />
+    <None Include="readme.md" Pack="True" PackagePath="." />
+  </ItemGroup>
+  <ItemGroup>
+  </ItemGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>$(DefineConstants);ASYNC;SunamoGoogleSheets;SunamoGoogleSheets.csproj</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DefineConstants>$(DefineConstants);ASYNC;SunamoGoogleSheets;SunamoGoogleSheets.csproj</DefineConstants>
+  </PropertyGroup>
 </Project>
