--- a/SunamoGoogleSheets.Tests/SunamoGoogleSheets.Tests.csproj
+++ b/SunamoGoogleSheets.Tests/SunamoGoogleSheets.Tests.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
-    <PackageReference Include="SunamoFileIO" Version="25.3.29.1" />
+    <PackageReference Include="SunamoFileIO" Version="*" />
     <PackageReference Include="TextCopy" Version="6.2.1" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
